fix wrong position of mention dropdown, limit mention query

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -92,7 +92,6 @@ hr {
   left: 0;
 
   ul {
-    height: 500px;
     display: flex;
     flex-direction: column-reverse;
     overflow: hidden;
